--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
   <meta charset="UTF-8" />
-  <title>Hello World</title>
+  <title>React Demo</title>
   <script src="https:/unpkg.com/react@latest/dist/react.js"></script>
   <script src="https:/unpkg.com/react-dom@latest/dist/react-dom.js"></script>
   <script src="https:/unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
@@ -11,3 +11,4 @@
     <div id="myDiv"></div>
   </body>
 </html>
+<!-- This is the index file in use! -->
